MyDemoOrg/force-app/main/default/objects/BBCRM__BuzzBoard_Configuration__c/BBCRM__BuzzBoard_Configuration__c.object-meta.xml
<CustomObject>
    <label>BuzzBoard Configuration</label>
    <nameField>
        <displayFormat>BB-{000000}</displayFormat>
        <label>BuzzBoard Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BuzzBoard Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>