MyDemoOrg/force-app/main/default/objects/BBCRM__BuzzBoard_Configuration__c/fields/BBCRM__BB_Sync_Items__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__BB_Sync_Items__c</fullName>
    <label>BB Sync Items</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Task sync</fullName>
            </value>
            <value>
                <fullName>Contact sync</fullName>
            </value>
            <value>
                <fullName>Event sync</fullName>
            </value>
            <value>
                <fullName>Email notifications sync</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>