MyDemoOrg/force-app/main/default/objects/BBCRM__BuzzBoard_Configuration__c/fields/BBCRM__BB_Sync_Type__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__BB_Sync_Type__c</fullName>
    <label>BB Sync Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Automatic</fullName>
                <default>true</default>
                <label>Automatic</label>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>