MyDemoOrg/force-app/main/default/objects/BBCRM__BuzzBoard_Configuration__c/fields/BBCRM__Convert_Status__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__Convert_Status__c</fullName>
    <label>Convert Status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>