MyDemoOrg/force-app/main/default/objects/BBCRM__BuzzBoard_Configuration__c/fields/BBCRM__DuplicateLead__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__DuplicateLead__c</fullName>
    <label>DuplicateLead</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Keep</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>