MyDemoOrg/force-app/main/default/objects/BBCRM__BuzzBoard_Configuration__c/fields/BBCRM__Enable_enrich__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__Enable_enrich__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable enrich?</label>
    <type>Checkbox</type>
</CustomField>