MyDemoOrg/force-app/main/default/objects/BBCRM__BuzzBoard_Configuration__c/fields/BBCRM__Lead_enable__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__Lead_enable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead enable?</label>
    <type>Checkbox</type>
</CustomField>