MyDemoOrg/force-app/main/default/objects/BBCRM__BuzzBoard_Configuration__c/fields/BBCRM__Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__Lead_Status__c</fullName>
    <label>Lead Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>