MyDemoOrg/force-app/main/default/objects/BBCRM__BuzzBoard_Configuration__c/fields/BBCRM__Proposal__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__Proposal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proposal</label>
    <type>Checkbox</type>
</CustomField>